campaign: fix display of caret on small devices

--- a/web/share/campaign/campaign.css
+++ b/web/share/campaign/campaign.css
@@ -289,6 +289,7 @@ h4 small {
 
 /* Some hacks to directly embed the dropdown menu into the navbar.  */
 .lang-chooser-xs { margin-top: 12px; }
+.lang-chooser-xs .caret { color: #fafafa; }
 .lang-chooser-xs .dropdown-menu { left: -2em; }
 .lang-chooser-xs li, .lang-chooser-xs > li > a { display: inline; }
 
